...
                            <button opaque="NO" contentMode="scaleAspectFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fYM-66-5ZU" userLabel="Login">
                                <rect key="frame" x="281" y="380" width="38" height="30"/>
                                <state key="normal" image="Client Login Button"/>
                                <connections>
                                    <action selector="login:" destination="xIv-H0-VoW" eventType="touchUpInside" id="KQe-Db-RgD"/>
...
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Hl-Xv-YDT" userLabel="Sign Up">
                                <rect key="frame" x="273" y="430" width="55" height="30"/>
                                <state key="normal" title="Sign up now!"/>
                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                    <rect key="frame" x="216" y="434" width="121" height="30"/>
...
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="goO-x3-n1R" customClass="NVBTextField" customModule="MyRo"
                                <rect key="frame" x="20" y="320" width="560" height="40"/>
                                <constraints>
...
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDQ-us-WMz" customClass="NVBTextField" customModule="MyRo"
                                <rect key="frame" x="20" y="260" width="560" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
                                    <constraint firstAttribute="width" constant="120" id="m12-c9-mZa"/>
                                </constraints>
                                <state key="normal" image="Connect Button"/>
                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                    <rect key="frame" x="53" y="372" width="251" height="48"/>
...
                                </variation>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Robot Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8e7-5C-1D8" customClass="NVBTextField" customModule="MyRo" customModuleProvider="target"
                                <rect key="frame" x="30" y="120" width="315" height="30"/>
                                <constraints>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Connect To Robot" image="world-icon" selectedImage="world-icon" id="xzN-Xp-wgt"/>
                    <connections>
                        <outlet property="robotCodeTextField" destination="8e7-5C-1D8" id="iKJ-Ie-ArQ"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N7B-0x-Hm7" customClass="NVBTextField" customModule="MyRo" customModuleProvider="target">
                                <rect key="frame" x="20" y="60" width="335" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="poa-Nz-xCN" customClass="NVBTextField" customModule="MyRo" customModuleProvider="target">
                                <rect key="frame" x="20" y="100" width="335" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hwo-FC-wvw" customClass="NVBTextField" customModule="MyRo" customModuleProvider="t
                                <rect key="frame" x="20" y="140" width="335" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <constraint firstAttribute="width" constant="120" id="Z66-qj-v7Z"/>
                                </constraints>
                                <state key="normal" title="Button" image="Submit Button"/>
                                <connections>
                                    <action selector="register" destination="RBm-EB-iwK" eventType="touchUpInside" id="FgM-Sc-tI0"/>
...
