...
                MqttManager.sharedManager = MqttManager(subscriptions: ["myro/robot_location"])
                MqttManager.sharedManager.connect()
                
                User.currentUser = user
                self?.performSegueWithIdentifier("login", sender: nil)
            }.error { [weak self] (error: NSError) in
                let alertController = UIAlertController(title: "Authentication Failed", message: "Invalid username/password", preferredStyle: UIAlertControllerStyle.Alert)
                let cancelAction = UIAlertAction(title: "OK", style: .Cancel, handler: nil)
                alertController.addAction(cancelAction)
                
                self?.presentViewController(alertController, animated: true, completion: nil)
            }
    }
...
