...
                                <rect key="frame" x="0.0" y="387" width="375" height="280"/>
                                <state key="normal" image="Robot Button"/>
                                <connections>
                                    <segue destination="Ns9-q0-9qS" kind="show" id="alJ-Qy-AdX"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqT-VT-LCr" userLabel="User Button">
                                <rect key="frame" x="15" y="78" width="345" height="280"/>
                                <state key="normal" image="User Button"/>
                                <connections>
                                    <segue destination="4XQ-Mf-OAz" kind="show" id="DWO-t7-qTl"/>
                                </connections>
                            </button>
...
