...
        super.didReceiveMemoryWarning()
    }
    
    /// Attempts to connect to robot based on the code supplied by the user
    @IBAction func connectToRobot() {
        guard let code = self.robotCodeTextField.text where code == "code123" else {
            let alert = UIAlertController(title: "Error", message: "Invalid Robot Token", preferredStyle: .Alert)
            alert.addAction(UIAlertAction(title: "OK", style: .Cancel, handler: nil))
            self.presentViewController(alert, animated: true, completion: nil)
            
            return
        }
        
...
